# uwuify-mdbook

./: .gitignore  Cargo.toml  LICENSE  README.md
example_book/: book.toml
example_book/src/: SUMMARY.md
src/: main.rs
