[package]
name = "uwuify-mdbook"
version = "0.1.0"
authors = ["Aleti <alticodes@gmail.com>"]
edition = "2018"
documentation = "http://docs.rs/uwuify-mdbook"
exclude = ["/example_book/*"]
keywords = ["book", "gitbook", "rustbook", "markdown", "uwuify"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alyti/uwuify-mdbook"
description = "UwUifies your mdbooks"

[dependencies]
pulldown-cmark = "0.8.0"
pulldown-cmark-to-cmark = "6.0.0"
uwuify = "^0.2"
mdbook = "0.4"
clap = "2"
anyhow = "1"
serde = "1"
serde_json = "1"